// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`every() should fail when at least one item is not a string 1`] = `
Object {
  "errors": Array [
    Object {
      "errors": Array [],
      "message": "Value should be a string",
      "path": Array [
        "1",
      ],
      "value": 1,
    },
  ],
  "message": "Every value should follow the rule: Value should be a string",
  "path": Array [],
  "value": Array [
    "first",
    1,
    "last",
  ],
}
`;

exports[`every() should support custom message 1`] = `
Object {
  "errors": Array [
    Object {
      "errors": Array [],
      "message": "Value should be a string",
      "path": Array [
        "0",
      ],
      "value": 1,
    },
  ],
  "message": "Custom message",
  "path": Array [],
  "value": Array [
    1,
    "test",
  ],
}
`;
